--- a/app/src/main/res/layout/fragment_order_updates.xml
+++ b/app/src/main/res/layout/fragment_order_updates.xml
@@ -27,47 +27,41 @@
 
     </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="29dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="13dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingBottom="24dp">
+
+        <EditText
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="29dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal"
-            android:paddingBottom="24dp">
+            android:layout_weight="1"
+            android:background="@drawable/order_update_comment_box"
+            android:hint="Enter Your Query Here"
+            android:paddingVertical="14dp"
+            android:paddingLeft="13dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/hint_color"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            app:boxStrokeColor="@color/box_background_color" />
 
-            <EditText
-                android:id="@+id/text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/order_update_comment_box"
-                android:hint="Enter Your Query Here"
-                android:paddingVertical="14dp"
-                android:paddingLeft="13dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/hint_color"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                app:boxStrokeColor="@color/box_background_color" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/sendBtn"
-                android:layout_width="43dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:backgroundTint="#2D8DFF"
-                android:paddingLeft="6dp"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/send_button"
-                app:iconSize="35dp"
-                app:iconTint="@color/white" />
+        <ImageView
+            android:id="@+id/sendBtn"
+            android:layout_width="43dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="6dp"
+            android:src="@drawable/send_button"/>
 
 
-        </LinearLayout>
-
-
+    </LinearLayout>
 
 
 </RelativeLayout>
