--- a/app/src/main/res/layout/fragment_final_order_summary.xml
+++ b/app/src/main/res/layout/fragment_final_order_summary.xml
@@ -66,6 +66,7 @@
                             android:textColor="@color/black"/>
 
                         <TextView
+                            android:id="@+id/orderTotal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -89,6 +90,7 @@
                             android:textColor="@color/black"/>
 
                         <TextView
+                            android:id="@+id/shoppreFee"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -118,6 +120,7 @@
                             android:textColor="@color/black"/>
 
                         <TextView
+                            android:id="@+id/total"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
