--- a/app/src/main/res/layout/fragment_thank_you.xml
+++ b/app/src/main/res/layout/fragment_thank_you.xml
@@ -23,10 +23,10 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="5dp">
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -111,17 +111,17 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="90dp"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="0.9"
-                        android:src="@drawable/referral_invite"
-                        android:layout_gravity="center_vertical"/>
+                        android:src="@drawable/referral_invite" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginVertical="10dp"
                         android:layout_weight="1"
                         android:orientation="vertical"
-                        android:padding="8dp"
-                        android:layout_marginVertical="10dp">
+                        android:padding="8dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -138,22 +138,24 @@
                             android:text="Get Rs. 500 cashback when your
 friend’s first package arrives at
 our warehouse"
-                            android:textSize="9sp"
+                            android:textColor="#766565"
                             android:textFontWeight="600"
-                            android:textColor="#766565"/>
+                            android:textSize="9sp" />
+
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/invite"
                             android:layout_width="match_parent"
                             android:layout_height="22dp"
-                            android:insetBottom="0dp"
-                            android:insetTop="0dp"
-                            app:backgroundTint="#17B28F"
                             android:layout_marginTop="5dp"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
                             android:text="Invite"
                             android:textAllCaps="false"
-                            android:textSize="10sp"
                             android:textColor="@color/white"
                             android:textFontWeight="700"
-                            />
+                            android:textSize="10sp"
+
+                            app:backgroundTint="#17B28F" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -163,10 +165,9 @@ our warehouse"
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="102dp"
-                android:background="@mipmap/wtsp"
                 android:layout_margin="12dp"
-                android:paddingVertical="10dp"
-                >
+                android:background="@mipmap/wtsp"
+                android:paddingVertical="10dp">
 
                 <TextView
                     android:id="@+id/wtsp"
@@ -192,10 +193,10 @@ our warehouse"
                     android:insetBottom="0dp"
                     android:text="Enable Whatsapp Alerts"
                     android:textAllCaps="false"
-                    android:textSize="10sp"
-                    app:backgroundTint="#17B28F"
+                    android:textColor="@color/white"
                     android:textFontWeight="700"
-                    android:textColor="@color/white"/>
+                    android:textSize="10sp"
+                    app:backgroundTint="#17B28F" />
 
             </RelativeLayout>
 
@@ -204,36 +205,33 @@ our warehouse"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="10dp"
-                app:cardElevation="4dp"
-                >
+                app:cardElevation="4dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
 
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-
-                        android:layout_marginLeft="10dp"
                         android:layout_gravity="center_vertical"
-                        >
+                        android:layout_marginLeft="10dp"
 
+                        android:layout_weight="1"
+                        android:orientation="vertical">
 
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Enter your International Shipping Address to avoid any hassle during shipment"
-                            android:textSize="9sp"
+                            android:textColor="#766565"
                             android:textFontWeight="600"
-                            android:textColor="#766565"/>
-                        <LinearLayout
+                            android:textSize="9sp" />
 
+                        <LinearLayout
+                            android:id="@+id/address"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp">
@@ -256,14 +254,15 @@ our warehouse"
 
                         </LinearLayout>
                     </LinearLayout>
+
                     <ImageView
-                        android:layout_marginTop="-2dp"
-                        android:layout_alignParentRight="true"
                         android:layout_width="161dp"
                         android:layout_height="103dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginTop="-2dp"
                         android:layout_marginBottom="-2dp"
-                        android:src="@drawable/ic_international_address"
-                        android:layout_gravity="center_vertical"/>
+                        android:src="@drawable/ic_international_address" />
 
                 </LinearLayout>
 
@@ -272,46 +271,49 @@ our warehouse"
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stay Connected!"
                 android:layout_gravity="center_horizontal"
-                android:textSize="12sp"
-                android:textFontWeight="600"
+                android:layout_marginTop="25dp"
+                android:text="Stay Connected!"
                 android:textColor="@color/black"
-                android:layout_marginTop="25dp"/>
+                android:textFontWeight="600"
+                android:textSize="12sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:layout_marginVertical="20dp">
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/linkedin"
-                    android:layout_marginHorizontal="5dp"/>
+                android:layout_marginVertical="20dp"
+                android:layout_marginTop="10dp">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@mipmap/instagram"
-                    android:layout_marginHorizontal="5dp"/>
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@mipmap/twitter"
-                    android:layout_marginHorizontal="5dp"/>
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/linkedin"
-                    android:layout_marginHorizontal="5dp"/>
+                    android:layout_marginHorizontal="5dp"
+                    android:src="@drawable/linkedin" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@mipmap/instagram"
-                    android:layout_marginHorizontal="5dp"/>
+                    android:layout_marginHorizontal="5dp"
+                    android:src="@mipmap/instagram" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:src="@mipmap/twitter" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:src="@drawable/linkedin" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:src="@mipmap/instagram" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
