--- a/app/src/main/res/layout/view_order_single_layout.xml
+++ b/app/src/main/res/layout/view_order_single_layout.xml
@@ -174,6 +174,7 @@
 
 
         <ImageView
+            android:id="@+id/toolTip"
             android:layout_width="11dp"
             android:layout_height="11dp"
             android:src="@drawable/tooltip"
