--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,10 +16,19 @@
     </style>
 
     //Dialogue Theme
-<!--    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">-->
-<!--        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>-->
-<!--        <item name="DialogTitleText">Please Wait</item>-->
-<!--        <item name="DialogSpotColor">@color/hint_color</item>-->
-<!--        <item name="DialogSpotCount">8</item>-->
-<!--    </style>-->
+    <!--    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">-->
+    <!--        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>-->
+    <!--        <item name="DialogTitleText">Please Wait</item>-->
+    <!--        <item name="DialogSpotColor">@color/hint_color</item>-->
+    <!--        <item name="DialogSpotCount">8</item>-->
+    <!--    </style>-->
+
+    <style name="PopupMenu">
+        <item name="android:itemBackground">@color/box_background_color</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:colorBackground">@color/hint_color</item>
+        <item name="android:dividerHeight">1dp</item>
+    </style>
+
 </resources>
