--- a/app/src/main/res/layout/fragment_thank_you.xml
+++ b/app/src/main/res/layout/fragment_thank_you.xml
@@ -289,7 +289,7 @@ our warehouse"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_marginHorizontal="5dp"
-                    android:src="@drawable/linkedin" />
+                    android:src="@drawable/ic_facebook_svg" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="36dp"
@@ -313,7 +313,7 @@ our warehouse"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_marginHorizontal="5dp"
-                    android:src="@mipmap/instagram" />
+                    android:src="@mipmap/twitter" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
