--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -38,7 +38,7 @@
                         android:layout_height="112dp"
                         android:layout_marginVertical="20dp"
                         android:layout_marginLeft="29dp"
-                        android:src="@drawable/big_round"
+                        android:src="@drawable/profile_pic"
                         app:civ_border_color="#2F4CAB"
                         app:civ_border_width="1dp" />
 
