--- a/app/src/main/res/layout/return_item_dialog_box.xml
+++ b/app/src/main/res/layout/return_item_dialog_box.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -17,20 +16,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginVertical="20dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="You have a previous incomplete order...\n\n Are you sure you still want to create a new order?"
+            android:text="@string/return_item_string"
             android:textColor="@color/black"
-            android:textFontWeight="600"
-            android:textSize="10sp" />
+            android:textFontWeight="500"
+            android:textSize="12sp" />
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="45dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="Please note that the previous order cannot be placed once you start a new order"
+            android:text=" Do you want to select more?"
             android:textColor="@color/black"
+            android:textFontWeight="500"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Please note that returns are allowed only once per package"
+            android:textColor="@color/black"
+            android:layout_marginTop="7dp"
             android:textFontWeight="500"
             android:textSize="10sp" />
 
@@ -49,7 +60,7 @@
                 android:layout_marginRight="15dp"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
-                android:text="Continue Order"
+                android:text="Add more items"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textFontWeight="600"
@@ -64,7 +75,7 @@
                 android:backgroundTint="#17B28F"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
-                android:text="Create New Order"
+                android:text="Proceed with 1 item"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textFontWeight="600"
