--- a/app/src/main/res/layout/package_details_single_layout.xml
+++ b/app/src/main/res/layout/package_details_single_layout.xml
@@ -194,12 +194,14 @@
         android:layout_height="match_parent"
         android:src="@drawable/three_dots"
         android:layout_marginLeft="19dp"
-        android:visibility="gone"/>
+        />
 
     <CheckBox
         android:id="@+id/packageDetailCheckbox"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginRight="-10dp"
+        android:layout_marginLeft="10dp"
+        android:visibility="gone"/>
 
 </LinearLayout>
