--- a/app/src/main/res/layout/fragment_order_summary.xml
+++ b/app/src/main/res/layout/fragment_order_summary.xml
@@ -9,14 +9,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="24dp">
+        android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            app:cardElevation="4dp">
+            app:cardElevation="4dp"
+            android:layout_margin="24dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
