--- a/app/src/main/res/layout/pricing_table_single_layout.xml
+++ b/app/src/main/res/layout/pricing_table_single_layout.xml
@@ -2,75 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    >
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/pricingTableKg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="16dp">
-
-        <TextView
-            android:id="@+id/pricingTableKg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="0.5"
-            android:textColor="@color/black"
-            android:textFontWeight="500"
-            android:textSize="14sp" />
-
-    </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/black" />
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:text="0.5"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:textFontWeight="500"
         android:gravity="center_horizontal"
-        android:layout_marginTop="16dp">
+        android:layout_weight="1"
+        android:layout_marginTop="14dp"/>
 
-        <TextView
-            android:id="@+id/priceInr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1,445"
-            android:textColor="@color/black"
-            android:textFontWeight="500"
-            android:textSize="14sp" />
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
 
-
-    </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/black" />
-
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/priceInr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="1,445"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:gravity="center_horizontal"
+        android:textSize="14sp"
+        android:textFontWeight="500"
         android:layout_weight="1"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="14dp"/>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
 
     <TextView
         android:id="@+id/priceUsd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-
         android:text="19"
+        android:singleLine="true"
+        android:layout_marginLeft="34dp"
         android:textColor="@color/black"
+        android:textSize="14sp"
         android:textFontWeight="500"
-        android:textSize="14sp" />
+        android:layout_weight="1"
+        android:layout_marginTop="14dp"/>
 
-    </LinearLayout>
 
 </LinearLayout>
