--- a/app/src/main/res/layout/return_item_dialog_box.xml
+++ b/app/src/main/res/layout/return_item_dialog_box.xml
@@ -4,13 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
+    app:cardElevation="4dp"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="30dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,7 +56,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/continueOrder"
+                android:id="@+id/addMoreProductBtn"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="27dp"
@@ -68,10 +71,10 @@
                 app:strokeColor="#2D8DFF" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/createNewOrder"
+                android:id="@+id/proceedWith1ItemBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="27dp"
-                android:layout_toRightOf="@+id/continueOrder"
+                android:layout_toRightOf="@+id/addMoreProductBtn"
                 android:backgroundTint="#17B28F"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
