--- a/app/src/main/res/layout/fragment_final_order_summary.xml
+++ b/app/src/main/res/layout/fragment_final_order_summary.xml
@@ -137,6 +137,7 @@
                         android:layout_marginTop="24dp">
 
                         <CheckBox
+                            android:id="@+id/check"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
