--- a/app/src/main/res/layout/order_summary_single_layout.xml
+++ b/app/src/main/res/layout/order_summary_single_layout.xml
@@ -35,6 +35,7 @@
         android:hint="Tax or Delivery Charges"
         android:paddingLeft="15dp"
         android:textColor="@color/black"
+        android:inputType="number"
         android:textSize="10sp" />
 
     <TextView
