--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -124,7 +124,7 @@
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp"
                     android:id="@+id/verifyEmailBox"
-                    android:visibility="gone">
+                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -166,6 +166,7 @@
                             android:layout_gravity="center"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
+                            android:paddingHorizontal="27dp"
                             android:text="Verify Email"
                             android:textAllCaps="false"
                             android:textFontWeight="700"
