--- a/app/src/main/res/layout/cart_single_layout.xml
+++ b/app/src/main/res/layout/cart_single_layout.xml
@@ -5,9 +5,10 @@
     android:orientation="vertical">
 
     <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="5dp"
         android:background="#E5E5E5"/>
 
     <TextView
@@ -15,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Myntra"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:textFontWeight="600"
         android:textSize="12sp"
         android:textColor="@color/black"/>
